Updated contact details by using form

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Ulaganathan A</h1>
     <p>Web Developer</p>
+    <a href = "table.html">Contact</a>
     <h2>ABOUT ME</h2>
     <p> Aspiring Full Stack Developer specializing in C# .NET &
         React.js, with 4+ years of experience in software
