--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Ulaganathan A - Web Developer</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Ulaganathan A</h1>
-    <p>Web Developer</p>
-    <a href = "table.html">Contact</a>
-    <h2>ABOUT ME</h2>
-    <p> Aspiring Full Stack Developer specializing in C# .NET &
+    <div class = "container">
+    <div class = "session-one">
+    <h1 class="session-one--name">Ulaganathan A</h1>
+    <p class="session-one--role">Web Developer</p>
+    <a class = "session-one--contact" href = "contactform.html">Contact</a>
+</div>
+
+<div class = "session-two">
+    <h2 class="session-two--title">ABOUT ME</h2>
+    <p class = "session-two--description"> Aspiring Full Stack Developer specializing in C# .NET &
         React.js, with 4+ years of experience in software
         testing and automation. Skilled in C#, .NET Core,
         React.js, SQL, JavaScript, and API development
@@ -19,14 +28,21 @@
         about transitioning into a full-time developer role and
         applying problem-solving skills in real-world
         applications.</p>
-        <h2>MY INTEREST</h2>
-        <ul style = "list-style-type: square;">
+
+    </div>
+
+    <div class = "session-three">
+        <h2 class="session-three--title">MY INTEREST</h2>
+        <ul class = "session-three--description" style = "list-style-type: square;">
             <li>WebDevelopment</li>
             <li>Gaming</li>
             <li>Software Testing</li>
         </ul>
-        <h2>MY PROJECT</h2>
-        <ul>
+    </div>
+
+    <div class = "session-four">
+        <h2 class="session-four--title">MY PROJECT</h2>
+        <ul class="session-four--description">
             <li> 
                 <h1>
                     Amazon E-commerece Clone
@@ -44,13 +60,18 @@
                     </p>
                 </li>
         </ul>
-        <p>
+    </div>
+    
+    <div class = "session-five">
+        <p class="session-five--title">
             Social Media:
             <a href = "https://www.linkedin.com/in/ulaga-nathan-dev/">linkedin</a>
             <a href = "https://github.com/Ulaganathan0709">github</a>
         </p>
-        <p>
+        <p class="session-five--description">
             &copy; Ulaganathan
         </p>
+    </div>
+    </div>
 </body>
 </html>
